minor overflow bug

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1415,7 +1415,7 @@ body {
 
       &__step {
         position: absolute;
-        left: 70%;
+        left: 60%;
         display: -webkit-box;
         display: flex;
         -webkit-box-orient: horizontal;
